positioning example figures

--- a/css/style.css
+++ b/css/style.css
@@ -635,6 +635,31 @@ body {
   transform: scale(0.45) rotate(35.1deg);
 }
 
+.background__figures_example_scene .background__primary .background__figure_1 {
+  translate: -3.3vw 23.8vh;
+  transform: rotate(2deg);
+}
+.background__figures_example_scene .background__secondary .background__figure_1 {
+  translate: 4.2vw 16.6vh;
+  transform: rotate(2deg);
+}
+.background__figures_example_scene .background__primary .background__figure_2 {
+  translate: 34.8vw 36.9vh;
+  transform: rotate(-1deg);
+}
+.background__figures_example_scene .background__secondary .background__figure_2 {
+  translate: -2.5vw 13.9vh;
+  transform: rotate(0deg);
+}
+.background__figures_example_scene .background__primary .background__figure_3 {
+  translate: 31.5vw 18.9vh;
+  transform: rotate(0deg);
+}
+.background__figures_example_scene .background__secondary .background__figure_3 {
+  translate: 17.9vw 39.9vh;
+  transform: rotate(1.1deg);
+}
+
 @-moz-document url-prefix() {
   .background__primary {
     mix-blend-mode: screen;
