add arrow img in .link-gradient in example section

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@
   font-weight: 800;
 }
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a, button, p, span, b, h1, h2, h3, h4, h5, h6, ul, li, .tariffs-item__overlay {
@@ -52,6 +53,7 @@ body {
 }
 
 .link-opacity {
+  -webkit-transition: opacity 0.2s ease-out;
   transition: opacity 0.2s ease-out;
 }
 .link-opacity:hover {
@@ -63,8 +65,10 @@ body {
 
 .link-underline {
   text-decoration: none;
+  -webkit-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
   outline: none;
+  background-image: -webkit-gradient(linear, left top, right top, from(#fff), to(#fff));
   background-image: linear-gradient(90deg, #fff 0%, #fff 100%);
   background-position: left bottom;
   background-size: 0px 1px;
@@ -86,8 +90,9 @@ body {
   font-size: 18px;
   color: inherit;
   text-decoration: none;
-  padding: 28px 56px;
-  box-sizing: border-box;
+  padding: 28px 26px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   position: relative;
   border-radius: 50px;
 }
@@ -99,11 +104,14 @@ body {
   left: 0;
   right: 0;
   border-radius: 50px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 2px;
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--rotate)), color-stop(rgba(189, 0, 255, 0.4)), color-stop(#0500ff), to(rgba(0, 240, 255, 0.4)));
   background-image: linear-gradient(var(--rotate), rgba(189, 0, 255, 0.4), #0500ff, rgba(0, 240, 255, 0.4));
   -webkit-animation: spin 15s ease-in-out 1s infinite;
           animation: spin 15s ease-in-out 1s infinite;
@@ -119,11 +127,18 @@ body {
   display: inline-block;
   overflow: hidden;
   height: 27px;
-  vertical-align: middle;
+  vertical-align: bottom;
+  padding: 0 30px;
 }
 .link-gradient span {
   display: block;
+  -webkit-transition: 0.6s cubic-bezier(0, 0, 0.04, 0.99);
   transition: 0.6s cubic-bezier(0, 0, 0.04, 0.99);
+}
+.link-gradient img {
+  margin-left: 34px;
+  margin-right: -27px;
+  vertical-align: bottom;
 }
 .link-gradient:hover span:first-child {
   margin-top: -27px;
@@ -136,11 +151,19 @@ body {
   left: 0;
 }
 .header-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .header-nav__link {
@@ -200,9 +223,15 @@ body {
   margin-top: 387px;
 }
 .example-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 62px;
 }
 .example-top__list {
@@ -221,6 +250,7 @@ body {
 }
 .example-top__list li span {
   display: inline-block;
+  background: -webkit-gradient(linear, right top, left top, from(#710099), to(#03009D));
   background: linear-gradient(to left, #710099, #03009D);
   -webkit-background-clip: text;
           background-clip: text;
@@ -239,22 +269,32 @@ body {
   z-index: -1;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 500px;
   height: 500px;
   display: inline-block;
   background: linear-gradient(67deg, #0500FF, #710099);
   border-radius: 50px;
-  filter: blur(350px);
+  -webkit-filter: blur(350px);
+          filter: blur(350px);
 }
 .example-block__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .example-block__img {
   max-width: 775px;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 15px;
 }
 .example-block__list {
@@ -262,7 +302,9 @@ body {
   margin: 0;
   list-style: none;
   max-width: 775px;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .example-block__list li {
   font-family: "ppmi", sans-serif;
@@ -281,8 +323,12 @@ body {
   margin-top: 26px;
 }
 .example-block__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 51px;
 }
 .example-block__description {
@@ -292,7 +338,9 @@ body {
   line-height: 150%;
   opacity: 0.4;
   max-width: 1330px;
-  flex: 1 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
 }
 
 .tariffs {
@@ -303,14 +351,20 @@ body {
   max-width: 835px;
 }
 .tariffs-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 50px;
   z-index: 2;
   position: relative;
 }
 .tariffs-item {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   width: 100%;
   border: 2px solid rgba(255, 255, 255, 0.1);
   border-radius: 15px;
@@ -330,29 +384,42 @@ body {
   left: 0;
   right: 0;
   display: inline-block;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--rotate)), color-stop(rgba(189, 0, 255, 0.4)), color-stop(#0500ff), to(rgba(0, 240, 255, 0.4)));
   background-image: linear-gradient(var(--rotate), rgba(189, 0, 255, 0.4), #0500ff, rgba(0, 240, 255, 0.4));
   -webkit-animation: spin 15s ease-in-out 1s infinite;
           animation: spin 15s ease-in-out 1s infinite;
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+          mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
           mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
           mask-composite: destination-out;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .tariffs-item__overlay {
   position: relative;
   z-index: 1;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 .tariffs-item__title {
   margin: 0;
 }
 .tariffs-item__description {
   opacity: 0.4;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   margin: 50px 0 50px;
 }
 .tariffs-item__list {
@@ -377,8 +444,12 @@ body {
 }
 .community-block {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 10px;
   padding: 0;
   margin-top: 80px;
@@ -389,13 +460,15 @@ body {
   z-index: -1;
   top: 50%;
   left: 25%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 300px;
   height: 400px;
   display: inline-block;
   background: linear-gradient(67deg, #0500FF, #710099);
   border-radius: 50px;
-  filter: blur(100px);
+  -webkit-filter: blur(100px);
+          filter: blur(100px);
 }
 .community-block:after {
   content: "";
@@ -403,16 +476,20 @@ body {
   z-index: -1;
   top: 50%;
   left: 75%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 300px;
   height: 400px;
   display: inline-block;
   background: linear-gradient(67deg, #0500FF, #710099);
   border-radius: 50px;
-  filter: blur(100px);
+  -webkit-filter: blur(100px);
+          filter: blur(100px);
 }
 .community-item {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   max-width: 835px;
   padding: 60px;
 }
@@ -444,6 +521,7 @@ body {
   display: inline-block;
   height: 2px;
   width: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--rotate)), color-stop(rgba(189, 0, 255, 0.4)), color-stop(#0500ff), to(rgba(0, 240, 255, 0.4)));
   background-image: linear-gradient(var(--rotate), rgba(189, 0, 255, 0.4), #0500ff, rgba(0, 240, 255, 0.4));
   -webkit-animation: spin 15s ease-in-out 1s infinite;
           animation: spin 15s ease-in-out 1s infinite;
@@ -456,13 +534,23 @@ body {
 
 .free {
   margin: 300px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .free-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   max-width: 1237px;
   width: 100%;
 }
@@ -474,13 +562,24 @@ body {
   border: 1px solid #0500FF;
   border-radius: 15px;
   padding: 40px 170px 40px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 .footer-block:nth-child(2) {
   margin-left: 220px;
@@ -578,7 +677,8 @@ body {
 }
 .background__primary, .background__secondary {
   position: absolute;
-  filter: blur(115px);
+  -webkit-filter: blur(115px);
+          filter: blur(115px);
 }
 .background__primary {
   mix-blend-mode: color-dodge;
@@ -587,77 +687,95 @@ body {
 
 .background__figures_support_scene:nth-child(1) .background__secondary .background__figure_1 {
   translate: -32.5vw 6.6vh;
-  transform: scale(0.45) rotate(33deg);
+  -webkit-transform: scale(0.45) rotate(33deg);
+          transform: scale(0.45) rotate(33deg);
 }
 .background__figures_support_scene:nth-child(1) .background__primary .background__figure_1 {
   translate: -27.1vw -13.4vh;
-  transform: scale(0.45) rotate(-14deg);
+  -webkit-transform: scale(0.45) rotate(-14deg);
+          transform: scale(0.45) rotate(-14deg);
 }
 .background__figures_support_scene:nth-child(1) .background__primary .background__figure_2 {
   translate: -42.2vw -2.1vh;
-  transform: scale(0.45) rotate(-14deg);
+  -webkit-transform: scale(0.45) rotate(-14deg);
+          transform: scale(0.45) rotate(-14deg);
 }
 .background__figures_support_scene:nth-child(1) .background__secondary .background__figure_2 {
   translate: -33.5vw 13.9vh;
-  transform: scale(0.45) rotate(32deg);
+  -webkit-transform: scale(0.45) rotate(32deg);
+          transform: scale(0.45) rotate(32deg);
 }
 .background__figures_support_scene:nth-child(1) .background__primary .background__figure_3 {
   translate: -32.5vw 9.9vh;
-  transform: scale(0.45) rotate(33deg);
+  -webkit-transform: scale(0.45) rotate(33deg);
+          transform: scale(0.45) rotate(33deg);
 }
 .background__figures_support_scene:nth-child(1) .background__secondary .background__figure_3 {
   translate: -28.1vw 1.9vh;
-  transform: scale(0.45) rotate(-13.9deg);
+  -webkit-transform: scale(0.45) rotate(-13.9deg);
+          transform: scale(0.45) rotate(-13.9deg);
 }
 
 .background__figures_support_scene:nth-child(2) .background__secondary .background__figure_1 {
   translate: 43.5vw -11.4vh;
-  transform: scale(0.45) rotate(33deg);
+  -webkit-transform: scale(0.45) rotate(33deg);
+          transform: scale(0.45) rotate(33deg);
 }
 .background__figures_support_scene:nth-child(2) .background__primary .background__figure_1 {
   translate: 44.9vw -4vh;
-  transform: scale(0.45) rotate(-14deg);
+  -webkit-transform: scale(0.45) rotate(-14deg);
+          transform: scale(0.45) rotate(-14deg);
 }
 .background__figures_support_scene:nth-child(2) .background__primary .background__figure_2 {
   translate: 46.2vw 2vh;
-  transform: scale(0.45) rotate(36deg);
+  -webkit-transform: scale(0.45) rotate(36deg);
+          transform: scale(0.45) rotate(36deg);
 }
 .background__figures_support_scene:nth-child(2) .background__secondary .background__figure_2 {
   translate: 37vw 2.1vh;
-  transform: scale(0.45) rotate(-12deg);
+  -webkit-transform: scale(0.45) rotate(-12deg);
+          transform: scale(0.45) rotate(-12deg);
 }
 .background__figures_support_scene:nth-child(2) .background__primary .background__figure_3 {
   translate: 50vw 2.7vh;
-  transform: scale(0.45) rotate(-16deg);
+  -webkit-transform: scale(0.45) rotate(-16deg);
+          transform: scale(0.45) rotate(-16deg);
 }
 .background__figures_support_scene:nth-child(2) .background__secondary .background__figure_3 {
   translate: 45.1vw -6.5vh;
-  transform: scale(0.45) rotate(35.1deg);
+  -webkit-transform: scale(0.45) rotate(35.1deg);
+          transform: scale(0.45) rotate(35.1deg);
 }
 
 .background__figures_example_scene .background__primary .background__figure_1 {
   translate: -3.3vw 23.8vh;
-  transform: rotate(2deg);
+  -webkit-transform: rotate(2deg);
+          transform: rotate(2deg);
 }
 .background__figures_example_scene .background__secondary .background__figure_1 {
   translate: 4.2vw 16.6vh;
-  transform: rotate(2deg);
+  -webkit-transform: rotate(2deg);
+          transform: rotate(2deg);
 }
 .background__figures_example_scene .background__primary .background__figure_2 {
   translate: 34.8vw 36.9vh;
-  transform: rotate(-1deg);
+  -webkit-transform: rotate(-1deg);
+          transform: rotate(-1deg);
 }
 .background__figures_example_scene .background__secondary .background__figure_2 {
   translate: -2.5vw 13.9vh;
-  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 .background__figures_example_scene .background__primary .background__figure_3 {
   translate: 31.5vw 18.9vh;
-  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 .background__figures_example_scene .background__secondary .background__figure_3 {
   translate: 17.9vw 39.9vh;
-  transform: rotate(1.1deg);
+  -webkit-transform: rotate(1.1deg);
+          transform: rotate(1.1deg);
 }
 
 @-moz-document url-prefix() {
@@ -693,11 +811,13 @@ body {
   }
   25%, 75% {
     translate: 20.9vw 33.6vh;
-    transform: rotate(-66deg);
+    -webkit-transform: rotate(-66deg);
+            transform: rotate(-66deg);
   }
   50% {
     translate: 30.3vw 29vh;
-    transform: rotate(36deg);
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
   }
 }
 @keyframes figureAnim2 {
@@ -706,11 +826,13 @@ body {
   }
   25%, 75% {
     translate: 20.9vw 33.6vh;
-    transform: rotate(-66deg);
+    -webkit-transform: rotate(-66deg);
+            transform: rotate(-66deg);
   }
   50% {
     translate: 30.3vw 29vh;
-    transform: rotate(36deg);
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
   }
 }
 @-webkit-keyframes figureAnim3 {
@@ -722,7 +844,8 @@ body {
   }
   50% {
     translate: 27.7vw 36.9vh;
-    transform: rotate(-117deg);
+    -webkit-transform: rotate(-117deg);
+            transform: rotate(-117deg);
   }
 }
 @keyframes figureAnim3 {
@@ -734,7 +857,8 @@ body {
   }
   50% {
     translate: 27.7vw 36.9vh;
-    transform: rotate(-117deg);
+    -webkit-transform: rotate(-117deg);
+            transform: rotate(-117deg);
   }
 }
 @-webkit-keyframes figureSecondaryAnim1 {
@@ -765,11 +889,13 @@ body {
   }
   25%, 75% {
     translate: 16.4vw 15vh;
-    transform: rotate(-78deg);
+    -webkit-transform: rotate(-78deg);
+            transform: rotate(-78deg);
   }
   50% {
     translate: 30.2vw 29.4vh;
-    transform: rotate(36deg);
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
   }
 }
 @keyframes figureSecondaryAnim2 {
@@ -778,11 +904,13 @@ body {
   }
   25%, 75% {
     translate: 16.4vw 15vh;
-    transform: rotate(-78deg);
+    -webkit-transform: rotate(-78deg);
+            transform: rotate(-78deg);
   }
   50% {
     translate: 30.2vw 29.4vh;
-    transform: rotate(36deg);
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
   }
 }
 @-webkit-keyframes figureSecondaryAnim3 {
@@ -794,7 +922,8 @@ body {
   }
   50% {
     translate: 27.9vw 36.9vh;
-    transform: rotate(-117deg);
+    -webkit-transform: rotate(-117deg);
+            transform: rotate(-117deg);
   }
 }
 @keyframes figureSecondaryAnim3 {
@@ -806,7 +935,8 @@ body {
   }
   50% {
     translate: 27.9vw 36.9vh;
-    transform: rotate(-117deg);
+    -webkit-transform: rotate(-117deg);
+            transform: rotate(-117deg);
   }
 }
 @-webkit-keyframes spin {
@@ -824,4 +954,4 @@ body {
   100% {
     --rotate: 360deg;
   }
-}/*# sourceMappingURL=style.css.map */
+}
