--- a/css/style.sass
+++ b/css/style.sass
@@ -93,7 +93,7 @@ body
   font-size: 18px
   color: inherit
   text-decoration: none
-  padding: 28px 56px
+  padding: 28px 26px
   box-sizing: border-box
   position: relative
   border-radius: 50px
@@ -123,10 +123,16 @@ body
     display: inline-block
     overflow: hidden
     height: calc(18px * 1.5)
-    vertical-align: middle
+    vertical-align: bottom
+    padding: 0 30px
   span
     display: block
     transition: .6s cubic-bezier(0, 0, 0.04, 0.99)
+  img
+    margin:
+      left: 34px
+      right: -27px
+    vertical-align: bottom
   &:hover span
     &:first-child
       margin-top: -27px
