--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,9 +62,12 @@ li,
 .noise {
   position: fixed;
   opacity: 0.4;
-  scale: 1.3;
-  z-index: 2;
+  z-index: 0;
   mix-blend-mode: overlay;
+  background-image: url("/img/noise.png");
+  background-repeat: revert;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
@@ -626,6 +629,7 @@ body {
 
 .background {
   position: absolute;
+  z-index: -1;
 }
 
 .background__figures {
