--- a/styles/globals.css
+++ b/styles/globals.css
@@ -621,6 +621,9 @@ body {
   margin: 0 auto;
   max-width: 835px;
   margin: 300px auto 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .support__description {
