--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1089,9 +1089,9 @@ body {
 }
 */
 
-.stats__image {
-  position: absolute;
-}
+/*.stats__image {*/
+/*  position: absolute;*/
+/*}*/
 .stats__titles {
   position: absolute;
   display: flex;
@@ -1106,7 +1106,7 @@ body {
 }
 .stats__titles-wrap {
   width: 100vw;
-  height: 7vh;
+  height: 6vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1116,12 +1116,128 @@ body {
 
 }
 
-.stats__title, .stats__title_1, .stats__title_2 {
+.stats__title {
   position: absolute;
   background: #070612;
   width: 100%;
   text-align: center;
 }
+
+.stats__image-frame {
+  position: absolute;
+}
+
+.stats__image {
+  border-radius: 15px;
+}
+
+#slide-0 .stats__image-frame:nth-child(1) {
+  transform: translate(267%, 177%);
+}
+
+#slide-0 .stats__image-frame:nth-child(2) {
+  transform: translate(-11%, 246%);
+}
+
+#slide-0 .stats__image-frame:nth-child(3) {
+  transform: translate(159%, 422%);
+}
+
+#slide-0 .stats__image-frame:nth-child(4) {
+  transform: translate(98%, 590%);
+}
+
+#slide-0 .stats__image-frame:nth-child(5) {
+  transform: translate(236%, 792%);
+}
+
+#slide-0 .stats__image-frame:nth-child(6) {
+  transform: translate(-62%, 717%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(1) {
+  transform: translate(294%, 38%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(2) {
+  transform: translate(-87%, 112%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(3) {
+  transform: translate(116%, 170%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(4) {
+  transform: translate(328%, 225%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(5) {
+  transform: translate(-20%, 339%);
+}
+
+#slide-1 > .stats__image-frame:nth-child(6) {
+  transform: translate(377%, 413%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(1) {
+  transform: translate(-79%, 20%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(2) {
+  transform: translate(187%, 163%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(3) {
+  transform: translate(-14%, 325%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(4) {
+  transform: translate(100%, 485%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(5) {
+  transform: translate(-60%, 588%);
+}
+
+#slide-2 > .stats__image-frame:nth-child(6) {
+  transform: translate(238%, 688%);
+}
+
+
+.stats__unit {
+  background: linear-gradient(200deg, #0500FF, #710099);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 2px transparent;
+  color: #06050f;
+  font-weight: 800;
+  font-size: 96px;
+  line-height: 98px;
+}
+
+.stats__sum {
+  font-weight: 800;
+  font-size: 96px;
+  line-height: 98px;
+}
+
+.section-title {
+  font-weight: 800;
+  font-size: 96px;
+  line-height: 98px;
+}
+
+.section-title {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.stats__titles-wrap {
+  height: 12vh;
+}
+
+
 
 /*.stats__slides {*/
 /*  height: 570px;*/
@@ -1594,5 +1710,5 @@ body {
 }
 
 .stats__slide {
-  height: 100vh;
+  height: 250vh;
 }
