--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1100,10 +1100,10 @@ body {
   height: 100vh;
   width: 100vw;
 }
-.stats__slide {
-  border: medium dashed rebeccapurple;
+/*.stats__slide {*/
+/*  border: medium dashed rebeccapurple;*/
 
-}
+/*}*/
 .stats__titles-wrap {
   width: 100vw;
   height: 6vh;
@@ -1112,7 +1112,7 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  border: medium dashed green;
+  /*border: medium dashed green;*/
 
 }
 
