--- a/styles/globals.css
+++ b/styles/globals.css
@@ -649,8 +649,9 @@ body {
   height: 100vh;
   width: 100vw;
   object-fit: cover;
+  max-height: 1080px;
+  max-width: 1920px;
 }
-
 
 .example__background-image {
   transform: translateY(-10vh);
@@ -1751,3 +1752,4 @@ body {
     display: inherit;
   }
 }
+
