--- a/styles/globals.css
+++ b/styles/globals.css
@@ -362,6 +362,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: space-between;
 }
 
 .tariffs-item__title {
