fix: update domain to openmoviedb.com, remove CF tunnel

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,7 +11,7 @@ const {
   description = 'Все популярные источники фильмов в одном API. В базе уже 960 тысяч фильмов, 6 млн персон (актеров, режиссеров ...) и 1 млн изображений к кино',
 } = Astro.props;
 
-const siteUrl = 'https://openmovieapi.dev';
+const siteUrl = 'https://openmoviedb.com';
 const ogImages = [
   { url: `${siteUrl}/img/800-600.jpg`, width: 800, height: 600 },
   { url: `${siteUrl}/img/900-800.jpg`, width: 900, height: 800 },
