--- a/src/components/Support.astro
+++ b/src/components/Support.astro
@@ -5,7 +5,7 @@
   <div class="container">
     <h2 class="support__title section-title">Поддержка</h2>
     <p class="support__description section-body">
-      Мы не оставим Вас без поддержки, сотрудники openmovieapi.dev онлайн 24/7. Готовы решить практически любой ваш
+      Мы не оставим Вас без поддержки, сотрудники openmoviedb.com онлайн 24/7. Готовы решить практически любой ваш
       вопрос, а также - подсказать, помочь, обновить, загрузить, даже доработать код для корректной работы с API.
     </p>
   </div>
